--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       }
     }
   </script> 
-  <script type="module" src="/src/js/script.js"></script>
+  <script type="module" src="/robozin-3d/src/js/script.js"></script>
 </body>
 </html>
